# telegram-speech-bot

./: .mise.toml  Chart.yaml  Dockerfile  README.md  pyproject.toml  values.yaml
.github/workflows/: workflow.yml
chart/: Chart.yaml  values.yaml
chart/templates/: bob.yaml  config.yaml  gsa-json.yaml  secrets.yaml  service-account.yaml
src/bob/: __main__.py  config.py  init.py
src/bob/application/: __init__.py  app_config.py
src/bob/application/exceptions/: language.py
src/bob/application/ports/: __init__.py  image_text_recognizer.py  language_detector.py  telegram_queue.py  telegram_uploader.py  text_to_speech.py
src/bob/application/repos/: __init__.py  chat.py  state.py
src/bob/application/services/: __init__.py  initial_message_sender.py  inline_options_builder.py
src/bob/application/use_cases/: __init__.py  handle_image_message.py  handle_inline_callback.py  handle_text_message.py  handle_update.py
src/bob/domain/model/: __init__.py  chat.py  inline.py  inline_option.py  message.py  state.py  text_message.py
src/bob/infrastructure/adapters/image_text_recognizer/: __init__.py  gcp.py  stub.py
src/bob/infrastructure/adapters/language_detector/: __init__.py  google_cloud_translation.py  stub.py
src/bob/infrastructure/adapters/telegram_queue/: __init__.py  nats.py  ptb.py
src/bob/infrastructure/adapters/telegram_uploader/: ptb.py
src/bob/infrastructure/adapters/text_to_speech/: __init__.py  azure.py  gcp.py  stub.py
src/bob/infrastructure/repos/chat/: __init__.py  static.py
src/bob/infrastructure/repos/state/: __init__.py  firestore.py  memory.py
src/bob/interface/cli/: app.py
src/bob/interface/events/: telegram_update_router.py
templates/: bob.yaml  config.yaml  secrets.yaml
