[project]
requires-python = "==3.13.*"
name = "bob"
description = "Sends voice messages"
version = "1.0.0"
authors = [{ name = "BlindfoldedSurgery", email = "team@blindfolded.surgery" }]
classifiers = [
    "Private :: Do Not Upload",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "aiofiles >=24.0.0, <25.0.0",
    "azure-cognitiveservices-speech ==1.46.*",
    "bs-config [dotenv] ==1.1.2",
    "bs-nats-updater ==2.0.7",
    "click >=8.1.3, <9.0.0",
    "google-cloud-firestore >=2.7.3, <3.0.0",
    "google-cloud-texttospeech >=2.13.0, <3.0.0",
    "google-cloud-translate >=3.9.0, <4.0.0",
    "google-cloud-vision >=3.2.0, <4.0.0",
    "injector >=0.22.0, <0.23.0",
    "langcodes >=3.3.0, <4.0.0",
    "language-data >=1.3.0, <2.0.0",
    "more-itertools >=10.0.0, <11.0.0",
    "python-telegram-bot ==22.4",
    "sentry-sdk >=2.0.0, <3.0.0",
    "uvloop ==0.21.*",
]

[dependency-groups]
dev = [
    "mypy ==1.18.*",
    "pytest >=8.0.0, <9.0.0",
    "ruff ==0.13.1",
    "types-aiofiles >=24.1.0.0, <24.2.0",
    "types-requests >=2.28.11, <3.0.0",
]

[[tool.uv.index]]
name = "internal"
url = "https://pypi.bjoernpetersen.net/simple"
explicit = true

[tool.uv.sources]
bs-config = { index = "internal" }
bs-nats-updater = { index = "internal" }
bs-state = { index = "internal" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
strict = true
warn_return_any = false

[[tool.mypy.overrides]]
module = "tests.*"
strict = false
check_untyped_defs = true
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "google.cloud.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "asyncache"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "azure.*"
ignore_missing_imports = true

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "FURB",
    "G",
    "I001",
    "LOG",
    "PTH",
    "Q",
    "TC001",
    "TC002",
    "TC003",
    "TC004",
    "TC005",
    "UP",
]
ignore = [
    # redundant-open-modes
    "UP015",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["bob"]
